# students-temperatures

./: .env.dist  .gitignore  README.md  pyproject.toml  requirements.txt  students.csv
docs/: technical_requirements.md
initial_data/: admins.json  students.json
src/: main.py  run_admins_telegram_bot.py  run_users_telegram_bot.py
src/admins_telegram_bot/: bot.py  handlers.py  middlewares.py  responses.py
src/admins_telegram_bot/keyboards/: buttons.py  markups.py
src/common/: middlewares.py  responses.py
src/config/: __init__.py  env_vars.py  initial_script.py  settings.py  students.json
src/db/: __init__.py  database.db  engine.py  init_db.py  models.py  queries.py
src/telegram_bot/: bot.py  filters.py  middlewares.py  responses.py
src/telegram_bot/handlers/: __init__.py  admin.py  non_users.py  student.py
src/telegram_bot/keyboards/: __init__.py  buttons.py  markups.py
src/users_telegram_bot/: bot.py  filters.py  fsm_states.py  handlers.py  middlewares.py  parsers.py  responses.py  telegram_utils.py
src/users_telegram_bot/keyboards/: buttons.py  markups.py
src/utils/: data_types.py  file_utils.py  report_utils.py  temperature_utils.py  time_utils.py
src/utils/excel_report/: __init__.py  cell_types.py  report_generator.py
