[tool.poetry]
name = "students-temperatures"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.19"
pendulum = "^2.1.2"
peewee = "^3.14.9"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
openpyxl = "^3.0.9"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
